Fix WebRTC audio streaming, add screen sharing, improve video call handling

--- a/public/index.html
+++ b/public/index.html
@@ -449,6 +449,9 @@
       <button class="call-btn" id="video-camera-btn" onclick="toggleDirectCallVideo()" title="Camera">
         <i class="fas fa-video"></i>
       </button>
+      <button class="call-btn" id="screen-share-btn" onclick="toggleScreenSharing()" title="Share Screen">
+        <i class="fas fa-share-square"></i>
+      </button>
       <button class="call-btn end" onclick="endDirectCall()" title="End Call">
         <i class="fas fa-phone-slash"></i>
       </button>
